--- a/www/css/index/.ignore/index_main.less
+++ b/www/css/index/.ignore/index_main.less
@@ -44,3 +44,4 @@
 @import "styles/default-graphic-sizing -- graphic_sizing.less";
 @import "styles/default-image-sizing -- graphic_image_sizing.less";
 @import "afui-button-group-no-dmargins.less";
+@import "uib_row_5.less";
