--- a/www/css/index_main.less.css
+++ b/www/css/index_main.less.css
@@ -534,3 +534,21 @@ body:not(#afui) .upage-outer {
 #afui .button-grouped > .d-margins {
   margin: 0;
 }
+.uib_row_5:not(.cright) > .col {
+  padding-right: 20px;
+}
+.uib_row_5.cright > .col {
+  padding-left: 20px;
+}
+@media all {
+  .col-0_12-12 {
+    width: auto;
+    float: none !important;
+  }
+  .urow:not(.cright) > .col-0_12-12 {
+    padding-right: 0px !important;
+  }
+  .urow.cright > .col-0_12-12 {
+    padding-left: 0px !important;
+  }
+}
